# cmakeTestcomplete

./: CMakeLists.txt  Makefile  main.cpp
cmake/: JsonLibrary.cmake
lib/: CMakeLists.txt
lib/Estudiante/: CMakeLists.txt  estudiante.cpp  estudiante.h
lib/Persona/: CMakeLists.txt  persona.cpp  persona.h
pandalib/: ExamenesEstudiante.h  SimulacroEventos.h
